Use "toList()"